--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="72">
     <nav class="navbar navbar-expand-lg fixed-top bg-secondary text-uppercase" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="#page-top">LEWIFZZ</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler text-white bg-primary text-uppercase rounded" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="#page-top">Levijcdf</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler text-white bg-primary text-uppercase rounded" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">MIS caracteristicas</a></li>
@@ -108,22 +108,7 @@
             <hr class="star-dark mb-5">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <form id="contactForm" name="sentMessage">
-                        <div>
-                            <div class="mb-0 form-floating pb-2"><input class="form-control" type="text" id="name" required="" placeholder="Name"><label class="form-label">Nombre</label><small class="form-text text-danger help-block"></small></div>
-                        </div>
-                        <div>
-                            <div class="mb-0 form-floating pb-2"><input class="form-control" type="email" id="email" required="" placeholder="Email Address"><label class="form-label">Dirección de Correo</label><small class="form-text text-danger help-block"></small></div>
-                        </div>
-                        <div>
-                            <div class="mb-0 form-floating pb-2"><input class="form-control" type="tel" id="phone" required="" placeholder="Phone Number"><label class="form-label">Numero de telefono</label><small class="form-text text-danger help-block"></small></div>
-                        </div>
-                        <div>
-                            <div class="mb-5 form-floating pb-2"><textarea class="form-control" id="message" required="" placeholder="Message" style="height: 150px;"></textarea><label class="form-label">Mensage</label><small class="form-text text-danger help-block"></small></div>
-                        </div>
-                        <div id="success"></div>
-                        <div><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Enviar</button></div>
-                    </form>
+                    
                 </div>
             </div>
         </div>
