Se han cambiado las titulaciones

--- a/index.html
+++ b/index.html
@@ -386,19 +386,20 @@
                             <hr class="star-dark mb-5">
                             <div class="skills-container">
                                 <div class="skill-card">
-                                    <h3>Ciberseguridad CEH</h3>
+                                    <h3>FPGS Desarrollo de Aplicaciones Web</h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Desarrollo Web Full Stack</h3>
+                                    <h3>Curso de Especialización en Ciberseguridad en Entornos de las Tecnologías de la Información</h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>CompTIA Security+</h3>
+                                    <h3>Udemy: C Programming For Beginners - Master the C Language</h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Administración de Linux</h3>
+                                    <h3>The Complete JavaScript Course 2024: From Zero to Expert!
+                                    </h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Ingeniería Informática</h3>
+                                    <h3>Universidad Python - Cero a Experto - Actualizado (+86 hrs)</h3>
                                 </div>
                             </div>
                         </div>
