--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
                     <h4 class="text-uppercase mb-4">Encuentráme</h4>
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="#https://github.com/LewiFZZ">
+                            <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://github.com/LewiFZZ">
                                 <i class="fa fa-github fa-fw"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="#https://www.linkedin.com/in/levi-josu%C3%A9-candeias-de-figueiredo-547082309/">
+                            <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://www.linkedin.com/in/levi-josu%C3%A9-candeias-de-figueiredo-547082309/">
                                 <i class="fa fa-linkedin-square fa-fw"></i>
                             </a>
                         </li>
