--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 </section>
 
     
-    <footer class="text-center footer">
+    <footer class="text-center footer" style="color: white;">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-5 mb-lg-0">
