Se ha cambiado la informacion de un modal

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 </div>
                                 <div class="skill-card">
                                     <h3>Castellano</h3>
-                                    <p>Nivel: Muy Avanzado</p>
+                                    <p>Nivel: Avanzado</p>
                                 </div>
                                 <div class="skill-card">
                                     <h3>Inglés</h3>
