Update course names in index.html

--- a/index.html
+++ b/index.html
@@ -392,14 +392,14 @@
                                     <h3>Curso de Especialización en Ciberseguridad en Entornos de las Tecnologías de la Información</h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Udemy: C Programming For Beginners - Master the C Language</h3>
+                                    <h3>Udemy -> C Programming For Beginners - Master the C Language</h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>The Complete JavaScript Course 2024: From Zero to Expert!
+                                    <h3>Udemy -> The Complete JavaScript Course 2024: From Zero to Expert!
                                     </h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Universidad Python - Cero a Experto - Actualizado (+86 hrs)</h3>
+                                    <h3>Udemy -> Universidad Python - Cero a Experto - Actualizado (+86 hrs)</h3>
                                 </div>
                             </div>
                         </div>
