Update styles for modal cards and color palette

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 
     <!-- Modal Soft Skills -->
-<div class="modal text-center" role="dialog" tabindex="-1" id="portfolio-modal-2">
+<div class="modal text-center modalBorder" role="dialog" tabindex="-1" id="portfolio-modal-2">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
