Update course names and add links in index.html

--- a/index.html
+++ b/index.html
@@ -392,14 +392,15 @@
                                     <h3>Curso de Especialización en Ciberseguridad en Entornos de las Tecnologías de la Información</h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Udemy -> C Programming For Beginners - Master the C Language</h3>
+                                    <h3><a target="_blank" href="https://www.udemy.com/course/c-programming-for-beginners-/?couponCode=JUST4U02223">Udemy -> C Programming For Beginners - Master the C Language</a></h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Udemy -> The Complete JavaScript Course 2024: From Zero to Expert!
+                                    <h3>
+                                        <a target="_blank" href="https://www.udemy.com/course/the-complete-javascript-course/">Udemy -> The Complete JavaScript Course 2024: From Zero to Expert!</a>
                                     </h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Udemy -> Universidad Python - Cero a Experto - Actualizado (+86 hrs)</h3>
+                                    <h3><a target="_blank" href="https://www.udemy.com/course/universidad-python-desde-cero-hasta-experto-django-flask-rest-web/learn/lecture/45143325?start=0#notes">Udemy -> Universidad Python - Cero a Experto - Actualizado (+86 hrs)</a></h3>
                                 </div>
                             </div>
                         </div>
