Se han cambiado las informaciones que habia en el portfolio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container"><img class="img-fluid d-block mx-auto mb-5" src="assets/img/profile.png" id="profilePhoto">
             <h1>Levi Josué Candeias de Figueiredo</h1>
             <hr class="star-light">
-            <h2 class="fw-light mb-0">Desarrollador Web • Entusiasta de GNU/Linux • Asesor de Ciberseguridad</h2>
+            <h2 class="fw-light mb-0">Desarrollador Web • Entusiasta de GNU/Linux</h2>
         </div>
     </header>
     
@@ -98,7 +98,7 @@
                 <div class="col">
                     <h1 class="sobremi">¿Quién Soy?</h1>
                     <p style="font-size: 25px;">
-                        Soy un <strong>Desarrollador Web</strong> y <strong>Especialista en Ciberseguridad</strong>.<br>
+                        Soy un <strong>Desarrollador Web</strong> y <strong>entusiasta de sistemas operativos y ciberseguridad</strong>.<br>
                         Desde que tengo memoria, he sido un apasionado de las nuevas tecnologías y la innovación. 
                         Me encanta el mundo de los videojuegos y todo lo que rodea la ficción, y siempre busco maneras de integrar mis pasiones en mis proyectos.
                     </p>
@@ -298,19 +298,16 @@
                             <hr class="star-dark mb-5">
                             <div class="skills-container">
                                 <div class="skill-card">
-                                    <h3>JavaScript, Python y PHP</h3>
+                                    <h3>Desarrollo de apps de escritorio (Java, C, Python y Electron)</h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Ciberseguridad</h3>
-                                </div>
-                                <div class="skill-card">
-                                    <h3>Desarrollo web</h3>
+                                    <h3>Desarrollo web (stack web basico + backend)</h3>
                                 </div>
                                 <div class="skill-card">
                                     <h3>Gestión de bases de datos</h3>
                                 </div>
                                 <div class="skill-card">
-                                    <h3>Automatización en Linux</h3>
+                                    <h3>Automatización en Linux (BASH)</h3>
                                 </div>
                             </div>
                         </div>
@@ -342,10 +339,7 @@
                             <hr class="star-dark mb-5">
                             <div class="skills-container">
                                 <div class="skill-card">
-                                    <h3>Desarrollo web</h3>
-                                </div>
-                                <div class="skill-card">
-                                    <h3>Auditorías de ciberseguridad</h3>
+                                    <h3>Desarrollo web Full Stack</h3>
                                 </div>
                                 <div class="skill-card">
                                     <h3>Consultoría tecnológica</h3>
@@ -387,9 +381,6 @@
                             <div class="skills-container">
                                 <div class="skill-card">
                                     <h3>FPGS Desarrollo de Aplicaciones Web</h3>
-                                </div>
-                                <div class="skill-card">
-                                    <h3>Curso de Especialización en Ciberseguridad en Entornos de las Tecnologías de la Información</h3>
                                 </div>
                                 <div class="skill-card">
                                     <h3><a target="_blank" href="https://www.udemy.com/course/c-programming-for-beginners-/?couponCode=JUST4U02223">Udemy -> C Programming For Beginners - Master the C Language</a></h3>
@@ -459,6 +450,10 @@
                                 <div class="skill-card">
                                     <h3>Python</h3>
                                     <p>Nivel: Intermedio</p>
+                                </div>
+                                <div class="skill-card">
+                                    <h3>CSS Bootstrap*</h3>
+                                    <p>Nivel: Avanzado</p>
                                 </div>
                             </div>
                         </div>
