Se han cambiado las descripciones de las imagenes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="col-md-6 col-lg-4">
                     <figure class="text-center">
                         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-1" data-bs-toggle="modal">
-                            <img class="img-fluid" src="assets/img/portfolio/1.png" alt="Descripción de la imagen 1">
+                            <img class="img-fluid" src="assets/img/portfolio/1.png" alt="Idiomas que domino">
                             <figcaption class="mt-2">Idiomas</figcaption>
                         </a>
                     </figure>
@@ -48,7 +48,7 @@
                 <div class="col-md-6 col-lg-4">
                     <figure class="text-center">
                         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-2" data-bs-toggle="modal">
-                            <img class="img-fluid" src="assets/img/portfolio/2.png" alt="Descripción de la imagen 2">
+                            <img class="img-fluid" src="assets/img/portfolio/2.png" alt="Mis habilidades no técnicas">
                             <figcaption class="mt-2">Soft Skills</figcaption>
                         </a>
                     </figure>
@@ -56,7 +56,7 @@
                 <div class="col-md-6 col-lg-4">
                     <figure class="text-center">
                         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-3" data-bs-toggle="modal">
-                            <img class="img-fluid" src="assets/img/portfolio/3.png" alt="Descripción de la imagen 3">
+                            <img class="img-fluid" src="assets/img/portfolio/3.png" alt="Mis habilidades técnicas">
                             <figcaption class="mt-2">Hard Skills</figcaption>
                         </a>
                     </figure>
@@ -64,7 +64,7 @@
                 <div class="col-md-6 col-lg-4">
                     <figure class="text-center">
                         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-4" data-bs-toggle="modal">
-                            <img class="img-fluid" src="assets/img/portfolio/4.png" alt="Descripción de la imagen 4">
+                            <img class="img-fluid" src="assets/img/portfolio/4.png" alt="Mis ambitos de trabajo">
                             <figcaption class="mt-2">Ámbitos de Trabajo</figcaption>
                         </a>
                     </figure>
@@ -72,7 +72,7 @@
                 <div class="col-md-6 col-lg-4">
                     <figure class="text-center">
                         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-5" data-bs-toggle="modal">
-                            <img class="img-fluid" src="assets/img/portfolio/5.png" alt="Descripción de la imagen 5">
+                            <img class="img-fluid" src="assets/img/portfolio/5.png" alt="Mis certificaciones y mis estudios">
                             <figcaption class="mt-2">Certificaciones y Títulos</figcaption>
                         </a>
                     </figure>
@@ -80,7 +80,7 @@
                 <div class="col-md-6 col-lg-4">
                     <figure class="text-center">
                         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-6" data-bs-toggle="modal">
-                            <img class="img-fluid" src="assets/img/portfolio/6.png" alt="Descripción de la imagen 6">
+                            <img class="img-fluid" src="assets/img/portfolio/6.png" alt="Lenguajes de Programación que utilizo">
                             <figcaption class="mt-2">Lenguajes de Programación</figcaption>
                         </a>
                     </figure>
