--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="container">
                         <h1 class="sobremi">¿Dónde me desplazo?</h1>
                         <p style="font-size: 25px;">
-                            Estoy dispuesto a desplazarme por toda la Península Ibérica si es necesario para resolver cualquier tipo de problema. 
+                            Estoy dispuesto a desplazarme por Extremadura y alentejo si es necesario para resolver cualquier tipo de problema. 
                             Resido en Elvas, Portugal, por lo que priorizaré los desplazamientos más cercanos.
                         </p>
                     </div>
