Modificações nos botões e nos estilos

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact" data-i18n="navbar_contact">CONTÁCTAME</a></li>
                 </ul>
                 <div class="ms-3 d-flex align-items-center gap-2">
-                    <button class="btn btn-sm btn-outline-light" onclick="changeLanguage('es')">ES</button>
-                    <button class="btn btn-sm btn-outline-light" onclick="changeLanguage('en')">EN</button>
-                    <button class="btn btn-sm btn-outline-light" onclick="changeLanguage('pt')">PT</button>
+                    <button id="btn-lang-es" class="btn btn-sm btn-outline-light" onclick="changeLanguage('es')">ES</button>
+                    <button id="btn-lang-en" class="btn btn-sm btn-outline-light" onclick="changeLanguage('en')">EN</button>
+                    <button id="btn-lang-pt" class="btn btn-sm btn-outline-light" onclick="changeLanguage('pt')">PT</button>
                 </div>
             </div>
         </div>
