--- a/index.html
+++ b/index.html
@@ -194,40 +194,23 @@
             </div>
         </div>
     </section>
-
-    
-    <footer class="text-center footer" style="color: white;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4" data-i18n="mi_direccion">Mi dirección</h4>
-                    <p data-i18n="direccion">Rua Dom Augusto Eduardo Nunes, S/N<br>Vivenda Figueiredo<br>Elvas, Portalegre, Portugal</p>
-                </div>
-                <div class="col-md-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4" data-i18n="info_adicional">Información Adicional</h4>
-                    <p data-i18n="disponible_freelance">Disponible para proyectos freelance y colaboraciones.</p>
-                </div>
-                <div class="col-md-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4" data-i18n="encuentrame">Encuéntrame</h4>
-                    <ul class="list-inline">
-                        <li class="list-inline-item">
-                            <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://github.com/LewiFZZ">
-                                <i class="fa fa-github fa-fw"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://www.linkedin.com/in/levi-josu%C3%A9-candeias-de-figueiredo-547082309/">
-                                <i class="fa fa-linkedin-square fa-fw"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
     <div class="text-center text-white copyright py-4">
         <div class="container">
-            <small data-i18n="copyright">Copyright © Levi Josué Candeias de Figueiredo 2024</small>
+            <small data-i18n="copyright">Copyright © Levi Josué Candeias de Figueiredo 2025</small>
+            <div class="container pt-3">
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://github.com/LewiFZZ">
+                            <i class="fa fa-github fa-fw"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://www.linkedin.com/in/levi-josu%C3%A9-candeias-de-figueiredo-547082309/">
+                            <i class="fa fa-linkedin-square fa-fw"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
